--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
                <h3 style="margin-bottom: 0; color: #fff; "><p style="margin-top: 0; ">I’m currently a student of the BSEU Digital Economy Faculty. Besides my study, I got involved into graphic design and would like to connect my future with this IT sphere. In 2021 I graduated UI/UX Designer professional courses at the IT Academy. During my studies, I gained practical skills by working on team projects.</p>
                   <p>I consider my professional qualities are creativity, perseverance, healthy perfectionism & meeting deadlines.</p>
                   <p style="margin-bottom: 0;">As a student I obtained many optional skills and knowledges concerning programming (VBA, C++, 1C:Enterprise, Access SQL), CIT, ERP, CRM and BI systems, Internet Marketing, Basic Business Process modeling tools, Data Analysis.</p></h3>
-               </div>
-
-               <div style="width: 3%; "></div>
-               <div style="width: 47%; max-width: 675px; display: flex; justify-content: right; align-self: flex-start; " ><div class="star_0"></div></div>
-
             </div>
+            <div style="width: 3%; "></div>
+            <div style="width: 47%; max-width: 675px; display: flex; justify-content: right; align-self: flex-start; " >
+               <div class="star_0"></div>
+            </div>
+         </div>
 
                   <!--
                   <p><h3>My skills:</h3></p>
@@ -274,16 +274,58 @@
                            <h4 style="font-size: 96px; text-align: right;">Other</h4>
                         </div>
                      </div>
-
-
                   </div>
                </div>
+
+               <div class="contain" style="justify-content: space-between;">
+                  <div style="width: 50%; display: flex; flex-direction: column; ">
+                        <h2 style="position: relative; top: 0px;">About</h2>
+                        <form id="form" action="post.php" method="post" name="form">
+                           <div class="form_content">
+                              <div class="input">
+                                 <a><h6>Name *</h6></a>
+                                 <input name="name" type="text" placeholder="Name" />
+                              </div>
+                              <div class="input">
+                                 <a><h6>E-mail *</h6></a>
+                                 <input name="email" type="text" placeholder="example@gmail.com" />
+                              </div>
+                              <div class="input">
+                                 <a><h6>Message *</h6></a>
+                                 <textarea name="message" placeholder="Message"></textarea>
+                              </div>
+
+                              <button type="submit" name="submit" class="btn">Register</button>
+                              
+                           </div>
+                        </form>
+                        <!--
+                        <div>
+                           <?php
+                           if(isset($_POST['submit']))
+                           {
+                              $name = $_POST['name'];
+                              $email = $_POST['email'];
+                              $message = $_POST['message'];
+                           }
+                           ?>
+                        </div>
+                     -->
+                  </div>
+                  <div style="width: 3%; "></div>
+                  <div style="width: 47%; max-width: 675px; display: flex; justify-content: right; align-self: flex-start; " >
+                     <div class="star_0"></div>
+                  </div>
+               </div>
+
             </main>
+
             <footer>
                <div class="container">
                   <h5 style=" width: 100%; text-align: center; margin-bottom: 0; margin-top: 0; ">Created with pure HTML & CSS<br>© Artsiom Papulin 2022</br></h5>
                </div>  
             </footer>
+
          </div>
       </body>
       </html>
