--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <link rel="stylesheet" href="CSS_PROFILE.css">
    <link rel="shortcut icon" href="content/icon.png" type="image/x-icon">
    <link rel="icon" href="content/icon.png" type="image/x-icon">
+   <script src="https://www.google.com/recaptcha/api.js"></script>
 </head>
 
 <body>
@@ -276,6 +277,34 @@
                      </div>
                   </div>
                </div>
+               <div class="contain" style="justify-content: space-between;">
+                  <div style="width: 50%; display: flex; flex-direction: column; ">
+                  <h2 style="position: relative; top: 0px;">About</h2>
+
+                        <form id="form" action="post.php" method="POST" name="form">
+                           <div class="form_content">
+                              <div class="input">
+                                 <a><h6>Name *</h6></a>
+                                 <input name="name" type="text" placeholder="Name" />
+                              </div>
+                              <div class="input">
+                                 <a><h6>E-mail *</h6></a>
+                                 <input name="email" type="text" placeholder="example@gmail.com" />
+                              </div>
+                              <div class="input">
+                                 <a><h6>Message *</h6></a>
+                                 <textarea name="message" placeholder="Message"></textarea>
+                              </div>
+                              <div class="g-recaptcha brochure__form__captcha" data-sitekey="6LefgYkhAAAAAOC19VGNOQwkk-iCiyEBafT-S7Sx"></div>
+                              <button type="submit" name="submit" class="btn">Register</button>
+                           </div>
+                        </form>
+                  </div>
+                  <div style="width: 3%; "></div>
+                  <div style="width: 47%; max-width: 675px; display: flex; justify-content: right; align-self: flex-start; " >
+                  <div class="star_0"></div>
+               </div>
+         </div>
             </main>
 
             <footer>
