--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
    <link rel="stylesheet" href="CSS_PROFILE.css">
    <link rel="shortcut icon" href="content/icon.png" type="image/x-icon">
    <link rel="icon" href="content/icon.png" type="image/x-icon">
-   <script src="https://www.google.com/recaptcha/api.js"></script>
 </head>
 
 <body>
@@ -113,38 +112,35 @@
             </div>
          </div>
 
-                  <!--
-                  <p><h3>My skills:</h3></p>
+               <div class="contain" style="align-items: center; ">
+                  <div style="width: 100%; display: flex; flex-direction: column; flex-wrap: wrap;">
+                     <h2 style="position: relative; top: 0px; width: 100%;">My services</h2>
 
-                  <p><h4>
-                  <ul>
-                     <li>MS Word;</li>
-                     <li>MS Excel;</li>z
-                     <li>MS PowerPoint;</li>
-                     <li>MS Access;</li>
-                     <li>Adobe Photoshop;</li>
-                     <li>Adobe Illustrator;</li>
-                     <li>Figma.</li>
-                  </ul></h4>
-                  </p>
-
-                  <p><h3>My professional qualities:</h3></p>
-
-                  <p><h4>
-                  <ul>
-                     <li>Creativity;</li>
-                     <li>Perseverance;</li>
-                     <li>Healthy perfectionism;</li>
-                     <li>Meeting deadlines.</li>
-                  </ul></h4>
-                  </p>
+                     <div class="services">
+                        <div style="display: flex; flex-direction: row; flex-wrap: wrap; gap: 10px 36px; align-items: center; ">
+                           <h1>app</h1>
+                           <div><img src="content/mini_star.svg"></div>
+                           <h1>web</h1>
+                           <div><img src="content/mini_star.svg"></div>
+                           <h1>presentation</h1>
+                           <div><img src="content/mini_star.svg"></div>
+                           <h1>banner</h1>
+                           <div><img src="content/mini_star.svg"></div>
+                           <h1>logo</h1>
+                           <div><img src="content/mini_star.svg"></div>
+                        </div>
+                        <div style="display: flex; flex-direction: row; flex-wrap: wrap; gap: 10px 36px; align-items: center; ">
+                           <h1>game interface</h1>
+                           <div><img src="content/mini_star.svg"></div>
+                           <h1>social media content</h1>
+                        </div>
+                     </div>
                   </div>
-
-               -->
+               </div>
                
                <div style="width: 100%; margin-bottom: 120px; position: relative; top: 0px; display: flex; flex-direction: column;">
                   <div>
-                     <h2 style="width: auto; margin-bottom: 40px;">Portfolio</h2>
+                     <h2 style="width: auto; margin-bottom: 40px;">Recent Projects</h2>
                      <div class="c">
                         <a href="https://www.behance.net/gallery/138245241/art-gallery-website" target="_blank" class="contain_portfolio">
                            <div class="div_proj_1"><img class="project_1" src="content/project_01.svg">
@@ -176,13 +172,13 @@
                      <div class="cc">
                         <h1>English</h1>
                         <div><img src="content/mini_star.svg"></div>
-                        <h4>Upper-intermediate</h4>
+                        <h4>B2</h4>
                      </div>
 
                      <div class="cc">
                         <h1>French</h1>
                         <div><img src="content/mini_star.svg"></div>
-                        <h4>Fluent</h4>
+                        <h4>C1</h4>
                      </div>
 
                      <div class="cc">
@@ -214,7 +210,7 @@
                         </div>
                         <div style="width: 80px;"></div>
                         <div style="display: flex; flex-direction: column; justify-content: flex-end; border-bottom: 1px solid #FFF; flex-grow: 1;">
-                           <h4 style="font-size: 96px; text-align: right;">2D</h4>
+                           <h1 style="text-align: right;">2D</h4>
                         </div>
                      </div>
 
@@ -225,7 +221,7 @@
                         </div>
                         <div style="width: 80px;"></div>
                         <div style="display: flex; flex-direction: column; justify-content: flex-end; border-bottom: 1px solid #FFF; flex-grow: 1;">
-                           <h4 style="font-size: 96px; text-align: right;">motion graphics & 3d</h4>
+                           <h1 style="text-align: right;">motion graphics & 3d</h4>
                         </div>
                      </div>
 
@@ -236,7 +232,7 @@
                         </div>
                         <div style="width: 80px;"></div>
                         <div style="display: flex; flex-direction: column; justify-content: flex-end; border-bottom: 1px solid #FFF; flex-grow: 1;">
-                           <h4 style="font-size: 96px; text-align: right;">project process</h4>
+                           <h1 style="text-align: right;">project process</h4>
                         </div>
                      </div>
 
@@ -248,7 +244,7 @@
                         </div>
                         <div style="width: 80px;"></div>
                         <div style="display: flex; flex-direction: column; justify-content: flex-end; border-bottom: 1px solid #FFF; flex-grow: 1;">
-                           <h4 style="font-size: 96px; text-align: right;">Front-End</h4>
+                           <h1 style="text-align: right;">Front-End</h4>
                         </div>
                      </div>
 
@@ -261,7 +257,7 @@
                         </div>
                         <div style="width: 80px;"></div>
                         <div style="display: flex; flex-direction: column; justify-content: flex-end; border-bottom: 1px solid #FFF; flex-grow: 1;">
-                           <h4 style="font-size: 96px; text-align: right;">MS Office</h4>
+                           <h1 style="text-align: right;">MS Office</h4>
                         </div>
                      </div>
 
@@ -272,39 +268,26 @@
                         </div>
                         <div style="width: 80px;"></div>
                         <div style="display: flex; flex-direction: column; justify-content: flex-end; border-bottom: 1px solid #FFF; flex-grow: 1;">
-                           <h4 style="font-size: 96px; text-align: right;">Other</h4>
+                           <h1 style="text-align: right;">Other</h4>
                         </div>
                      </div>
                   </div>
                </div>
-               <div class="contain" style="justify-content: space-between;">
-                  <div style="width: 50%; display: flex; flex-direction: column; ">
-                  <h2 style="position: relative; top: 0px;">About</h2>
+               <div class="contain" style="align-items: center; ">
+                  <div style="width: 100%; display: flex; flex-direction: column; flex-wrap: wrap; ">
+                     <h2 style="position: relative; top: 0px; width: 100%;">Interested in co-op? Contact me!</h2>
 
-                        <form id="form" action="post.php" method="POST" name="form">
-                           <div class="form_content">
-                              <div class="input">
-                                 <a><h6>Name *</h6></a>
-                                 <input name="name" type="text" placeholder="Name" />
-                              </div>
-                              <div class="input">
-                                 <a><h6>E-mail *</h6></a>
-                                 <input name="email" type="text" placeholder="example@gmail.com" />
-                              </div>
-                              <div class="input">
-                                 <a><h6>Message *</h6></a>
-                                 <textarea name="message" placeholder="Message"></textarea>
-                              </div>
-                              <div class="g-recaptcha brochure__form__captcha" data-sitekey="6LefgYkhAAAAAOC19VGNOQwkk-iCiyEBafT-S7Sx"></div>
-                              <button type="submit" name="submit" class="btn">Register</button>
-                           </div>
-                        </form>
+                     <div class="contacts">
+                        <a href="mailto:art.papulin@gmail.com"><h1>Gmail</h1></a>
+                        <div style="width: 100%; border-bottom: 1px solid #FFF; "></div>
+                        <a href="https://t.me/Vable"><h1>telegram</h1></a>
+                        <div style="width: 100%; border-bottom: 1px solid #FFF; "></div>
+                        <a href="https://www.linkedin.com/in/artpapulin/"><h1>LinkedIn</h1></a>
+                        <div style="width: 100%; border-bottom: 1px solid #FFF; "></div>
+                        <a href="https://www.behance.net/art_papulin/"><h1>BEHANCE</h1></a>
+                     </div>
                   </div>
-                  <div style="width: 3%; "></div>
-                  <div style="width: 47%; max-width: 675px; display: flex; justify-content: right; align-self: flex-start; " >
-                  <div class="star_0"></div>
                </div>
-         </div>
             </main>
 
             <footer>
