--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
                <div class="contain" style="align-items: center; ">
                   <div style="width: 100%; display: flex; flex-direction: column; flex-wrap: wrap;">
-                     <h2 style="position: relative; top: 0px; width: 100%;">My services</h2>
+                     <h2 style="position: relative; top: 0px; width: 100%;">Services</h2>
 
                      <div class="services">
                         <div style="display: flex; flex-direction: row; flex-wrap: wrap; gap: 10px 36px; align-items: center; ">
