--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
    <link rel="stylesheet" href="CSS_PROFILE.css">
    <link rel="shortcut icon" href="content/icon.png" type="image/x-icon">
    <link rel="icon" href="content/icon.png" type="image/x-icon">
+   <style>
+      :root {
+         --color-darkblue: #03001c;
+         --color-white: #FFF;
+         --color-pink: #da2063;
+      }
+   </style>
 </head>
 
 <body>
